tests/pythonmerge.txt
>>> import numpy as np
>>> import cv
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ImportError: No module named 'cv'
>>> import cv2
>>> 


































>>> im_1 = cv2.imread('img1.png')
>>> im_1.shape
(900, 1600, 3)
>>> import skimage
>>> im_1a = skimage.imread('img1.png')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'skimage' has no attribute 'imread'
>>> im_1a = skimage.io.imread('img1.png')
>>> im_1a.shape
(900, 1600, 3)
>>> h,w = im_1.shape[:2]
>>> h
900
>>> w
1600
>>> type(im_1)
<class 'numpy.ndarray'>
>>> im_2 = cv2.imread('img2.png')
>>> im_2.shape
(720, 1280, 3)
>>> 900*1600
1440000
>>> 720*1280
921600
>>> np.array([1])
array([1])
>>> a=np.array([1])
>>> b=np.array([2])
>>> a
array([1])
>>> b
array([2])
>>> a+b
array([3])
>>> a=np.array([1,2,3])
>>> b=np.array([1,2,3])
>>> a
array([1, 2, 3])
>>> b
array([1, 2, 3])
>>> a+b
array([2, 4, 6])
>>> a.shape
(3,)
>>> b.shape
(3,)
>>> a[:}
  File "<stdin>", line 1
    a[:}
       ^
SyntaxError: invalid syntax
>>> a[:]
array([1, 2, 3])
>>> a[:1]
array([1])
>>> a[:2]
array([1, 2])
>>> a[:]
array([1, 2, 3])
>>> im_1
array([[[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       ...,

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]]], dtype=uint8)
>>> im_1.shape
(900, 1600, 3)
>>> im_2.shape
(720, 1280, 3)
>>> s = im_2.shape
>>> s
(720, 1280, 3)
>>> s[0]
720
>>> im_12 = im_1[:720,:1280]
>>> im_12.shape
(720, 1280, 3)
>>> skimage.io.im
skimage.io.image_stack                 skimage.io.imsave(
skimage.io.imread(                     skimage.io.imshow(
skimage.io.imread_collection(          skimage.io.imshow_collection(
skimage.io.imread_collection_wrapper(  
>>> skimage.io.im
skimage.io.image_stack                 skimage.io.imsave(
skimage.io.imread(                     skimage.io.imshow(
skimage.io.imread_collection(          skimage.io.imshow_collection(
skimage.io.imread_collection_wrapper(  
>>> skimage.io.ims
skimage.io.imsave(             skimage.io.imshow_collection(
skimage.io.imshow(             
>>> skimage.io.ims
skimage.io.imsave(             skimage.io.imshow_collection(
skimage.io.imshow(             
>>> skimage.io.imsave(im_12)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: imsave() missing 1 required positional argument: 'arr'
>>> im_12
array([[[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       ...,

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]],

       [[0, 0, 0],
        [0, 0, 0],
        [0, 0, 0],
        ...,
        [0, 0, 0],
        [0, 0, 0],
        [0, 0, 0]]], dtype=uint8)
>>> skimage.io.imsave('blah',im_12)
/home/nikhil/virtualmachines/virtualenvs/py_3-5-2_2019-03-07/lib/python3.5/site-packages/skimage/io/_io.py:140: UserWarning: blah is a low contrast image
  warn('%s is a low contrast image' % fname)
Traceback (most recent call last):
  File "/home/nikhil/virtualmachines/virtualenvs/py_3-5-2_2019-03-07/lib/python3.5/site-packages/PIL/Image.py", line 1974, in save
    format = EXTENSION[ext]
KeyError: ''

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/nikhil/virtualmachines/virtualenvs/py_3-5-2_2019-03-07/lib/python3.5/site-packages/skimage/io/_io.py", line 143, in imsave
    return call_plugin('imsave', fname, arr, plugin=plugin, **plugin_args)
  File "/home/nikhil/virtualmachines/virtualenvs/py_3-5-2_2019-03-07/lib/python3.5/site-packages/skimage/io/manage_plugins.py", line 214, in call_plugin
    return func(*args, **kwargs)
  File "/home/nikhil/virtualmachines/virtualenvs/py_3-5-2_2019-03-07/lib/python3.5/site-packages/skimage/io/_plugins/pil_plugin.py", line 260, in imsave
    img.save(fname, format=format_str, **kwargs)
  File "/home/nikhil/virtualmachines/virtualenvs/py_3-5-2_2019-03-07/lib/python3.5/site-packages/PIL/Image.py", line 1976, in save
    raise ValueError('unknown file extension: {}'.format(ext))
ValueError: unknown file extension: 
>>> skimage.io.imsave('blah.png',im_12)
/home/nikhil/virtualmachines/virtualenvs/py_3-5-2_2019-03-07/lib/python3.5/site-packages/skimage/io/_io.py:140: UserWarning: blah.png is a low contrast image
  warn('%s is a low contrast image' % fname)
>>> im_2.shape
(720, 1280, 3)
>>> im_merge = im_2+im_12
>>> skimage.io.imsave('merge.png',im_merge)
>>> 
